--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -2,54 +2,6 @@
 # DOMESTIC OFFERS
 ################################################################################
 
-- title: Lopesan Costa Meloneras
-  id: lopesan-costa-meloneras
-  location: Gran Canaria
-  description: Un oasis de paz en Gran Canaria, en régimen de media pensión y con oferta especial en el spa
-  price: 167
-  price-description: por habitación por noche
-  saved: 32
-  expires: 2019/04/30
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/25648/3966a632_bdd5_4dde_8cdd_18fc32336098.jpg
-  link: https://es.secretescapes.com/lopesan-costa-meloneras-gran-canaria214-es/sale
-  domestic: true
-
-- title: Bohemia Suites & Spa
-  id: bohemia-suites-and-spa
-  location: Gran Canaria
-  description: Un hotel de diseño en Gran Canaria, con opción a desayuno o media pensión
-  price: 146
-  price-description: por habitación por noche
-  saved: 38
-  expires: 2019/04/30
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/9362/d78fa349_24c1_4f72_addd_b401bc657013.jpg
-  link: https://es.secretescapes.com/bohemia-suites-and-spa-gran-canaria-espa-espa/sale
-  domestic: true
-
-- title: Hospes Palacio del Bailío
-  id: hospes-palacio-del-bailío
-  location: Córdoba
-  description: Un palacio histórico en el centro de Córdoba, con desayuno, acceso diario al spa y más extras
-  price: 150
-  price-description: por habitación por noche
-  saved: 35
-  expires: 2019/04/27
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/26471/50df1177_3d2b_4905_bd07_b810b9dcf1f8.jpg
-  link: https://es.secretescapes.com/hospes-palacio-del-bailio-cordoba01-es/sale
-  domestic: true
-
-- title: Elba Premium Suites
-  id: elba-premium-suites
-  location: Lanzarote
-  description: Todo incluido o media pensión en un hotel solo para adultos en Lanzarote, con un acceso al spa y más
-  price: 123
-  price-description: por suite por noche
-  saved: 33
-  expires: 2019/04/30
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/50530/809ad9a1_14c2_4cd0_b2cb_768eb2734706.jpg
-  link: https://es.secretescapes.com/elba-premium-suites-lanzarote-es-pa/sale
-  domestic: true
-
 - title: FERGUS Style Tobago
   id: fergus-style-tobago
   location: Mallorca
@@ -57,9 +9,10 @@
   price: 128
   price-description: por habitación por noche
   saved: 60
-  expires: 2019/04/30
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/88670/b8b1d99f_4389_45ec_9808_c593f040320c.jpg
+  expires: 2019/05/08
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/88670/4c46adf7_a562_4793_9ad4_dce72e9f340b.jpg
   link: https://es.secretescapes.com/fergus-style-tobago-mallorca-es-pa/sale
+  sale-id: 92349
   domestic: true
 
 - title: Casa Cook Sa Torre
@@ -69,56 +22,23 @@
   price: 163
   price-description: por habitación por noche
   saved: 42
-  expires: 2019/04/29
+  expires: 2019/05/08
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92612/82c0c341_c73c_4353_ba39_e1c417c3304c.jpg
   link: https://es.secretescapes.com/casa-cook-sa-torre-llucmajor-mallorca-es/sale
-  domestic: true
-
-- title: Sir Victor Hotel Barcelona
-  id: sir-victor-hotel-barcelona
-  location: Barcelona
-  description: Diseño y confort en pleno centro de Barcelona, con extras y late check out
-  price: 170
-  price-description: por habitación por noche
-  saved: 44
-  expires: 2019/04/30
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92339/828c60b9_056e_475f_b939_d2709920aedc.jpg
-  link: https://es.secretescapes.com/sir-victor-hotel-barcelona-barcelona-es/sale
-  domestic: true
-
-- title: Aguas de Ibiza Lifestyle & Spa GL
-  id: aguas-de-ibiza-lifestyle-and-spa-gl
-  location: Ibiza
-  description: Un lujoso cinco estrellas en Ibiza, con vistas al mar. Incluye desayuno, acceso al spa y un cóctel
-  price: 279
-  price-description: por habitación por noche
-  saved: 35
-  expires: 2019/04/29
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/75638/227d2486_b09e_4788_a50d_b62c97817a7e.jpg
-  link: https://es.secretescapes.com/aguas-de-ibiza-lifestyle-and-spa-gl-ibiza214-es/sale
+  sale-id: 92612
   domestic: true
 
 - title: Arrecife Gran Hotel & Spa
   id: arrecife-gran-hotel-and-spa
   location: Lanzarote
   description: Relax a todo lujo en un hotel en Lanzarote, en régimen de media pensión y con un acceso al spa
-  price: 170
+  price: 153
   price-description: por suite por noche
-  saved: 28
-  expires: 2019/04/30
+  saved: 35
+  expires: 2019/05/08
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/69886/7b710f30_5188_4826_aa0f_d763699bcfa2.jpg
   link: https://es.secretescapes.com/arrecife-gran-hotel-and-spa-lanzarote-esp-esp/sale
-  domestic: true
-
-- title: Vincci The Mint
-  location: Madrid
-  description: Alójate en un hotel de diseño en plena Gran Vía, con desayuno y una bebida de bienvenida
-  price: 150
-  price-description: por habitación por noche
-  saved: 62
-  expires: 2019/04/29
-  image: https://d2xb1gb82lp62v.cloudfront.net/image/upload/f_auto,q_auto:best/a/sales/92164/b3819d97_3214_4901_aa37_dc64d61060cc.jpg
-  link: https://es.secretescapes.com/vincci-the-mint-madrid-esp/sale
+  sale-id: 92916
   domestic: true
 
 ################################################################################
@@ -132,9 +52,10 @@
   price: 181
   price-description: por habitación por noche
   saved: 49
-  expires: 2019/04/30
+  expires: 2019/05/08
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/68210/e100ceda_acf8_4714_b3d7_21386766eb7c.jpg
   link: https://es.secretescapes.com/grand-hotel-palace-roma-es/sale
+  sale-id: 91466
   domestic: false
 
 - title: Hotel Helvetia & Bristol
@@ -144,9 +65,10 @@
   price: 315
   price-description: por habitación por noche
   saved: 26
-  expires: 2019/04/30
+  expires: 2019/05/08
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92223/e2e157e9_54e7_42e9_aff2_34ac91b4fc68.jpg
   link: https://es.secretescapes.com/hotel-helvetia-and-bristol-florencia-es-pa/sale
+  sale-id: 92223
   domestic: false
 
 - title: Clarion Hotel The Hub
@@ -156,31 +78,83 @@
   price: 109
   price-description: por habitación por noche
   saved: 32
-  expires: 2019/04/30
+  expires: 2019/05/07
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92425/97e0ad09_2290_442d_adf1_616478d0465b.jpg
   link: https://es.secretescapes.com/clarion-hotel-the-hub-oslo-esp/sale
-  domestic: false
-
-- title: Longevity Health & Wellness Hotel
-  id: longevity-health-and-wellness-hotel
-  location: Algarve (Alvor, Portugal)
-  description: Un cinco estrellas dedicado al bienestar en el Algarve, con desayuno y varios extras de lujo
-  price: 135
-  price-description: por habitación por noche
-  saved: 56
-  expires: 2019/04/30
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/92158/41c20005_7b8b_4878_99c6_20b98e4b5e54.jpg
-  link: https://es.secretescapes.com/longevity-health-and-wellness-hotel-algarve-alvor-portugal-es/sale
+  sale-id: 92425
   domestic: false
 
 - title: Grand Hotel Principe di Piemonte
   id: grand-hotel-principe-di-piemonte
   location: Toscana (Viareggio, Italia)
   description: Un cinco estrellas en la ciudad toscana de Viareggio, con desayuno incluido y extras
-  price: 110
+  price: 100
   price-description: por habitación por noche
-  saved: 46
-  expires: 2019/04/30
+  saved: 52
+  expires: 2019/05/03
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/10181/6e6e6210_3c76_4c07_9e43_75d257e0f881.jpg
   link: https://es.secretescapes.com/grand-hotel-principe-di-piemonte-toscana-viareggio-italia-esp-esp/sale
+  sale-id: 92886
+  domestic: false
+
+- title: Iberostar Royal Andalus
+  id: iberostar-royal-andalus
+  location: Chiclana de la Frontera, Cádiz
+  description: Un cuatro estrellas frente al mar en Novo Sancti Petri, con media pensión o todo incluido y extras
+  price: 91
+  price-description: por habitación por noche
+  saved: 27
+  expires: 2019/05/08
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/81665/67160b8f_0e0b_4d69_b0b2_1d212d09f800.jpg
+  link: https://es.secretescapes.com/iberostar-royal-andalus-chiclana-de-la-frontera-cadiz-es-esp/sale
+  sale-id: 93488
+  domestic: false
+
+- title: Vincci Maritimo
+  id: vincci-maritimo
+  location: Barcelona
+  description: Un moderno hotel en la Diagonal Mar de Barcelona, con opción a desayuno y extras
+  price: 146
+  price-description: por habitación por noche
+  saved: 33
+  expires: 2019/05/08
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/93004/420ae37d_351a_4f05_9129_da0f549205d3.jpg
+  link: https://es.secretescapes.com/vincci-maritimo-barcelona-esp/sale
+  sale-id: 93004
+  domestic: false
+
+- title: Hotel Casa León
+  location: Gran Canaria
+  description: Media pensión y extras en un lujoso hotel con spa en el sur de Gran Canaria
+  price: 79
+  price-description: por persona. Basado en 2 personas, por habitación
+  saved: 61
+  expires: 2019/05/07
+  image: https://d2xb1gb82lp62v.cloudfront.net/image/upload/f_auto,q_auto:best/a/sales/42035/705147ec_d716_4442_8c30_693b79565b66.jpg
+  link: https://es.secretescapes.com/hotel-casa-leon-gran-canaria8541/sale
+  sale-id: 92865
+  domestic: false
+
+- title: Ibiza Sun Apartments
+  location: Ibiza
+  description: Sol, mar y relax junto a una de las mejores playas de Ibiza en una suite de lujo
+  price: 40
+  price-description: por persona. Basado en 3 personas, por suite
+  saved: 52
+  expires: 2019/05/07
+  image: https://d2xb1gb82lp62v.cloudfront.net/image/upload/f_auto,q_auto:best/a/sales/35128/c9353267_5181_4e1f_9c5e_e5fcf7ee48f5.jpg
+  link: https://es.secretescapes.com/ibiza-sun-apartments-ibiza123/sale
+  sale-id: 93479
+  domestic: false
+
+- title: Iberostar Grand Hotel Portals Nous
+  location: Calviá, Mallorca
+  description: Lujo frente al Mediterráneo en Mallorca, dos tipos de habitación para elegir y extras de lujo
+  price: 120
+  price-description: por persona. Basado en 2 personas, por habitación
+  saved: 28
+  expires: 2019/05/07
+  image: https://d2xb1gb82lp62v.cloudfront.net/image/upload/f_auto,q_auto:best/a/sales/87915/c4bef75f_efaf_499f_bcaf_f6e6681d4ec3.jpg
+  link: https://es.secretescapes.com/iberostar-grand-hotel-portals-nous-calvia-mallorca214/sale
+  sale-id: 93420
   domestic: false
